<resources>
    <string name="app_name">HideSeekCW</string>
    <string name="main_title">Hide &amp; Seek</string>
    <string name="main_play_hider">Play As Hider</string>
    <string name="main_play_seeker">Play As Seeker</string>
    <string name="find_title">Find a Game</string>
    <string name="find_join_public">Join Public Game</string>
    <string name="find_join_private">Join Private Game</string>
    <string name="find_host_private">Host Private Game</string>
    <string name="code_game">Code: xxxxxx</string>
    <string name="code">Code:</string>
    <string name="lobby_private_game">Private Game Lobby</string>
    <string name="lobby_public_game">Public Game Lobby</string>
    <string name="lobby_hider_name">Hider Name</string>
    <string name="lobby_seeker_name">Seeker Name</string>
    <string name="lobby_edit_name">Edit Name</string>
    <string name="Hider">Hider</string>
    <string name="Seeker">Seekers</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="select_title">Select Exhibit</string>
    <string name="selected_exhibit">Selected Exhibit:</string>
    <string name="exhibit_name">Exhibit Name</string>
    <string name="exhibit_desc">Exhibit Description</string>
    <string name="guesses_title">Guesses</string>
    <string name="guess_name">Guess x:</string>
    <string name="guess_desc">Guess</string>
    <string name="clues_title">Clues</string>
    <string name="clue_name">Clue x</string>
    <string name="clue_desc">Clue Description</string>
    <string name="chat_title">Chat</string>
    <string name="chat_name">Player:</string>
    <string name="chat_message">Chat Message</string>
    <string name="exhibit_info">Exhibit Information</string>
    <string name="new_clue">New Clue</string>
    <string name="input_new_clue">Input New Clue:</string>
    <string name="submit_timer">Submit x:xx</string>
    <string name="guesses_left">Guesses Left: x</string>
    <string name="hint">Hint - xxx</string>
    <string name="x">0</string>
    <string name="vote">Vote</string>
    <string name="vote_exhibit">Exhibit Vote</string>
    <string name="vote_exhibit_title">Vote For An Exhibit</string>
    <string name="back_main">Back To Main Menu</string>
    <string name="you_lost">You Lose</string>
    <string name="you_lost_desc">The Seekers Failed To Find The Exhibit!</string>
    <string name="you_won">You Win</string>
    <string name="you_won_desc">The Seekers Found The Exhibit!</string>
</resources>